# UNIFY

./: CMakeLists.txt
include/: global_thread_counter.h
tests/: buildindex_wrapper.cpp  search_wrapper.cpp
